fix: make dev
