# be/internal/controller/barbershop.go
@@ -33,7 +33,7 @@ type FindBarbershopInput struct {
 // Find handles a POST request to find barbershops within a certain radius.
 // @Summary Find barbershops within a certain radius
 // @Description Finds barbershops within a certain radius of the given coordinates and name.
-// @Tags barbershop
+// @Tags Barbershop
 // @Accept json
 // @Produce json
 // @Param input body FindBarbershopInput true "The input parameters for finding barbershops"
@@ -75,7 +75,7 @@ type CreateBarbershopInput struct {
 // Create handles a POST request to create a new barbershop.
 // @Summary Create a new barbershop
 // @Description Creates a new barbershop with the given name, location and number of employees.
-// @Tags barbershop
+// @Tags Barbershop
 // @Accept json
 // @Produce json
 // @Param input body CreateBarbershopInput true "The input parameters for creating a new barbershop"
@@ -108,7 +108,7 @@ func (br *BarberShopRoutes) Create(ctx *gin.Context) {
 // Show handles a GET request to retrieve details of a barbershop.
 // @Summary Retrieve details of a barbershop
 // @Description Retrieves details of a barbershop for the given shop ID.
-// @Tags barbershop
+// @Tags Barbershop
 // @Accept json
 // @Produce json
 // @Security ApiKeyAuth
@@ -149,7 +149,7 @@ type ModifyBarberShopInput struct {
 // Modify handles a PUT request to modify details of a barbershop.
 // @Summary Modify details of a barbershop
 // @Description Modifies details of a barbershop for the given shop ID.
-// @Tags barbershop
+// @Tags Barbershop
 // @Accept json
 // @Produce json
 // @Security ApiKeyAuth
@@ -186,7 +186,7 @@ func (br *BarberShopRoutes) Modify(ctx *gin.Context) {
 // Delete handles a DELETE request to delete a barbershop by ID.
 // @Summary Delete a barbershop by ID
 // @Description Deletes a barbershop by ID.
-// @Tags barbershop
+// @Tags Barbershop
 // @Accept json
 // @Produce json
 // @Security ApiKeyAuth
@@ -211,7 +211,7 @@ func (br *BarberShopRoutes) Delete(ctx *gin.Context) {
 // Calendar handles a GET request to get the calendar for a barbershop by ID.
 // @Summary Get the calendar for a barbershop by ID
 // @Description Gets the calendar for a barbershop by ID.
-// @Tags barbershop
+// @Tags Barbershop
 // @Accept json
 // @Produce json
 // @Security ApiKeyAuth
